Update the tense on some verbs in my current job.

--- a/experience.tex
+++ b/experience.tex
@@ -5,12 +5,12 @@
       {Staff Firmware Engineer}{Feb. 2019 -- Present}
       {Itron}{West Union, SC}
       \resumeItemListStart
-        \resumeItem{Demonstrated expertise in designing/developing applications on embedded Linux platforms in C/C++ and Rust}
+        \resumeItem{Demonstrates expertise in designing/developing applications on embedded Linux platforms in C/C++ and Rust}
         \resumeItem{Spearheaded the initiative to introduce Rust into our tech stack}
         \resumeItem{Extensive experience with cross-compilation and toolchains for both C/C++ and Rust}
-        \resumeItem{Optimized software for memory and performance constraints in resource-limited environments}
-        \resumeItem{Participated in the full software development lifecycle from design to testing and deployment}
-        \resumeItem{Collaborated in a team environment, participated in code reviews, and mentored junior developers}
+        \resumeItem{Optimizes software for memory and performance constraints in resource-limited environments}
+        \resumeItem{Participates in the full software development lifecycle from design to testing and deployment}
+        \resumeItem{Collaborates in a team environment, participates in code reviews, and mentors junior developers}
       \resumeItemListEnd
 
     \resumeSubheading
