--- a/experience.tex
+++ b/experience.tex
@@ -5,7 +5,7 @@
       {Staff Firmware Engineer}{Feb. 2019 -- Present}
       {Itron}{West Union, SC}
       \resumeItemListStart
-        \resumeItem{Demonstrates expertise in designing/developing applications on embedded Linux platforms in C/C++ and Rust}
+        \resumeItem{Demonstrates expertise in designing/developing applications for embedded Linux platforms in C/C++ and Rust}
         \resumeItem{Spearheaded the initiative to introduce Rust into our tech stack}
         \resumeItem{Extensive experience with cross-compilation and toolchains for both C/C++ and Rust}
         \resumeItem{Optimizes software for memory and performance constraints in resource-limited environments}
