Add license comments to all files

--- a/cv.sty
+++ b/cv.sty
@@ -1,3 +1,10 @@
+%-------------------------
+% Helper function definitions
+% Author : Lilith Screws 
+% Based off of: https://github.com/jakegut/resume/ 
+% License : MIT
+%------------------------
+
 \ProvidesPackage{cv}
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
