--- a/skills.tex
+++ b/skills.tex
@@ -1,3 +1,8 @@
+%-------------------------
+% Skills Section in Latex
+% Author : Lilith Screws 
+% License : MIT
+%------------------------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
