--- a/education.tex
+++ b/education.tex
@@ -1,3 +1,8 @@
+%-------------------------
+% Education Section in Latex
+% Author : Lilith Screws 
+% License : MIT
+%------------------------
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
