--- a/experience.tex
+++ b/experience.tex
@@ -1,3 +1,8 @@
+%-------------------------
+% Experience Section in Latex
+% Author : Lilith Screws 
+% License : MIT
+%------------------------
 \section{Experience}
   \resumeSubHeadingListStart
 
