--- a/header.tex
+++ b/header.tex
@@ -1,3 +1,8 @@
+%-------------------------
+% Header Section in Latex
+% Author : Lilith Screws 
+% License : MIT
+%------------------------
 \begin{center}
     \textbf{\Huge \scshape Lilith Screws} \\ \vspace{1pt}
     \small \PhoneNumber{} $|$ \href{mailto:lilith@queercoded.io}{\underline{litith@queercoded.io}} $|$ 
