--- a/projects.tex
+++ b/projects.tex
@@ -1,3 +1,8 @@
+%-------------------------
+% Projects Section in Latex
+% Author : Lilith Screws 
+% License : MIT
+%------------------------
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
