--- a/projects.tex
+++ b/projects.tex
@@ -6,7 +6,7 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Embedded Data Profiling Optimization} $|$ \emph{Rust, Serde, Tokio}}{Jan. 2023 -- Present}
+          {\color{accent1}\textbf{Embedded Data Profiling Optimization}\color{lightgray}\ $|$ \emph{Rust, Serde, Tokio}}{Jan. 2023 -- Present}
           \resumeItemListStart
             \resumeItem{Designed system for arbitrary profile data to be serialized, stored, and retrieved on resource constrained embedded Linux devices}
             \resumeItem{Efficently stored over 1 million records on resource contrained device}
@@ -14,7 +14,7 @@
             \resumeItem{Supports asynchronus access, resolving read/write deadlocks of previous system}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Rust Game Boy Emulator} $|$ \emph{Rust, SDL2, Git}}{Oct. 2022 -- Present}
+          {\color{accent1}\textbf{Rust Game Boy Emulator}\color{lightgray}\ $|$ \emph{Rust, SDL2, Git}}{Oct. 2022 -- Present}
           \resumeItemListStart
             \resumeItem{Successfully integrated the SDL2 library for cross-platform support}
             \resumeItem{Utilized TDD principles to build a comprehensive test suite, ensuring emulator accuracy}
