--- a/header.tex
+++ b/header.tex
@@ -4,7 +4,8 @@
 % License : MIT
 %------------------------
 \begin{center}
-    \textbf{\Huge \scshape Lilith Screws} \\ \vspace{1pt}
-    \small \PhoneNumber{} $|$ \href{mailto:lilith@queercoded.io}{\underline{litith@queercoded.io}} $|$ 
-    \href{https://github.com/motherofdaemons}{\underline{github.com/motherofdaemons}}
+    \textbf{\color{accent1}\Huge \scshape Lilith Screws} \\ \vspace{1pt}
+    \small \color{accent2}\faPhone\color{black}\ \PhoneNumber{} 
+    \href{mailto:lilith@queercoded.io}{\color{accent2}\faEnvelope\color{black}\ litith@queercoded.io} 
+    \href{https://github.com/motherofdaemons}{\color{accent2}\faGithubSquare\color{black}\ motherofdaemons}
 \end{center}
