--- a/skills.tex
+++ b/skills.tex
@@ -6,8 +6,8 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Rust, C++, C, Python, Bash, SQL} \\
-     \textbf{Developer Tools}{: Git, Docker, Azure Pipelines, CMake, Make, Cargo, NeoVim} \\
-     \textbf{Frameworks/Libraries}{: Tokio, Axum, CppUnit, DBus, ZBus, Serde}
+     \textbf{\color{accent1}Languages:}{ Rust, C++, C, Python, Bash, SQL} \\
+     \textbf{\color{accent1}Developer Tools:}{ Git, Docker, Azure Pipelines, CMake, Make, Cargo, NeoVim} \\
+     \textbf{\color{accent1}Frameworks/Libraries:}{ Tokio, Axum, CppUnit, DBus, ZBus, Serde}
     }}
  \end{itemize}
